添加数据加载 json 数据管理

--- a/frontend/src/common/app/global.scss
+++ b/frontend/src/common/app/global.scss
@@ -254,6 +254,10 @@ body {
   @extend .flex;
   flex-wrap: wrap;
 }
+.flex-end {
+  @extend .flex;
+  justify-content: flex-end;
+}
 
 .flex-1 {
   flex: 1;
