--- a/frontend/src/common/app/element-variables.scss
+++ b/frontend/src/common/app/element-variables.scss
@@ -69,6 +69,18 @@ $--font-path: '~element-ui/lib/theme-chalk/fonts';
   max-width: 200px;
 }
 
+.top-notify {
+  .el-alert__content {
+    width: 95%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+  .el-alert__closebtn {
+    color: #606266 !important;
+  }
+}
+
 button * {
   pointer-events: none;
 }
